--- a/proposal.ipynb
+++ b/proposal.ipynb
@@ -17,7 +17,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- Provide some relevant background information on the topic so that someone unfamiliar with it will be prepared to understand the rest of your proposal\n",
+    "- Clearly state the question you will try to answer with your project\n",
+    "- Identify and describe the dataset that will be used to answer the question"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -473,7 +477,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- note the imbalance in number of observations of each class of weather"
+    "- note the imbalance in number of observations of each class of weather\n",
+    "- cross-validation to help us find k value that gives higher accuracy\n",
+    "- predict using wind, average temperature, precipitation"
    ]
   },
   {
