added section titles

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -32,8 +32,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exploring the Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -136,6 +143,20 @@
     "    mutate(weather = as_factor(weather),\n",
     "           temp_avg = (temp_max + temp_min)/2)\n",
     "weather_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we perform ... ... write stuff here"
    ]
   },
   {
