--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -590,12 +590,192 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "══ Workflow [trained] ══════════════════════════════════════════════════════════\n",
+       "\u001b[3mPreprocessor:\u001b[23m Recipe\n",
+       "\u001b[3mModel:\u001b[23m nearest_neighbor()\n",
+       "\n",
+       "── Preprocessor ────────────────────────────────────────────────────────────────\n",
+       "3 Recipe Steps\n",
+       "\n",
+       "• step_upsample()\n",
+       "• step_scale()\n",
+       "• step_center()\n",
+       "\n",
+       "── Model ───────────────────────────────────────────────────────────────────────\n",
+       "\n",
+       "Call:\n",
+       "kknn::train.kknn(formula = ..y ~ ., data = data, ks = ~best_k,     kernel = ~\"rectangular\")\n",
+       "\n",
+       "Type of response variable: nominal\n",
+       "Minimal misclassification: 0.06832298\n",
+       "Best kernel: rectangular\n",
+       "Best k: 1"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 364 × 8</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.pred_class</th><th scope=col>date</th><th scope=col>precipitation</th><th scope=col>temp_max</th><th scope=col>temp_min</th><th scope=col>wind</th><th scope=col>weather</th><th scope=col>temp_avg</th></tr>\n",
+       "\t<tr><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;date&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>sun </td><td>2012-01-01</td><td> 0.0</td><td>12.8</td><td>5.0</td><td>4.7</td><td>drizzle</td><td>8.90</td></tr>\n",
+       "\t<tr><td>rain</td><td>2012-01-02</td><td>10.9</td><td>10.6</td><td>2.8</td><td>4.5</td><td>rain   </td><td>6.70</td></tr>\n",
+       "\t<tr><td>rain</td><td>2012-01-03</td><td> 0.8</td><td>11.7</td><td>7.2</td><td>2.3</td><td>rain   </td><td>9.45</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>fog </td><td>2015-12-28</td><td>1.5</td><td>5.0</td><td> 1.7</td><td>1.3</td><td>rain</td><td>3.35</td></tr>\n",
+       "\t<tr><td>rain</td><td>2015-12-30</td><td>0.0</td><td>5.6</td><td>-1.0</td><td>3.4</td><td>sun </td><td>2.30</td></tr>\n",
+       "\t<tr><td>sun </td><td>2015-12-31</td><td>0.0</td><td>5.6</td><td>-2.1</td><td>3.5</td><td>sun </td><td>1.75</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 364 × 8\n",
+       "\\begin{tabular}{llllllll}\n",
+       " .pred\\_class & date & precipitation & temp\\_max & temp\\_min & wind & weather & temp\\_avg\\\\\n",
+       " <fct> & <date> & <dbl> & <dbl> & <dbl> & <dbl> & <fct> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t sun  & 2012-01-01 &  0.0 & 12.8 & 5.0 & 4.7 & drizzle & 8.90\\\\\n",
+       "\t rain & 2012-01-02 & 10.9 & 10.6 & 2.8 & 4.5 & rain    & 6.70\\\\\n",
+       "\t rain & 2012-01-03 &  0.8 & 11.7 & 7.2 & 2.3 & rain    & 9.45\\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t fog  & 2015-12-28 & 1.5 & 5.0 &  1.7 & 1.3 & rain & 3.35\\\\\n",
+       "\t rain & 2015-12-30 & 0.0 & 5.6 & -1.0 & 3.4 & sun  & 2.30\\\\\n",
+       "\t sun  & 2015-12-31 & 0.0 & 5.6 & -2.1 & 3.5 & sun  & 1.75\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 364 × 8\n",
+       "\n",
+       "| .pred_class &lt;fct&gt; | date &lt;date&gt; | precipitation &lt;dbl&gt; | temp_max &lt;dbl&gt; | temp_min &lt;dbl&gt; | wind &lt;dbl&gt; | weather &lt;fct&gt; | temp_avg &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| sun  | 2012-01-01 |  0.0 | 12.8 | 5.0 | 4.7 | drizzle | 8.90 |\n",
+       "| rain | 2012-01-02 | 10.9 | 10.6 | 2.8 | 4.5 | rain    | 6.70 |\n",
+       "| rain | 2012-01-03 |  0.8 | 11.7 | 7.2 | 2.3 | rain    | 9.45 |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| fog  | 2015-12-28 | 1.5 | 5.0 |  1.7 | 1.3 | rain | 3.35 |\n",
+       "| rain | 2015-12-30 | 0.0 | 5.6 | -1.0 | 3.4 | sun  | 2.30 |\n",
+       "| sun  | 2015-12-31 | 0.0 | 5.6 | -2.1 | 3.5 | sun  | 1.75 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "    .pred_class date       precipitation temp_max temp_min wind weather\n",
+       "1   sun         2012-01-01  0.0          12.8     5.0      4.7  drizzle\n",
+       "2   rain        2012-01-02 10.9          10.6     2.8      4.5  rain   \n",
+       "3   rain        2012-01-03  0.8          11.7     7.2      2.3  rain   \n",
+       "⋮   ⋮           ⋮          ⋮             ⋮        ⋮        ⋮    ⋮      \n",
+       "362 fog         2015-12-28 1.5           5.0       1.7     1.3  rain   \n",
+       "363 rain        2015-12-30 0.0           5.6      -1.0     3.4  sun    \n",
+       "364 sun         2015-12-31 0.0           5.6      -2.1     3.5  sun    \n",
+       "    temp_avg\n",
+       "1   8.90    \n",
+       "2   6.70    \n",
+       "3   9.45    \n",
+       "⋮   ⋮       \n",
+       "362 3.35    \n",
+       "363 2.30    \n",
+       "364 1.75    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 1 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>.metric</th><th scope=col>.estimator</th><th scope=col>.estimate</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>accuracy</td><td>multiclass</td><td>0.6785714</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 1 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " .metric & .estimator & .estimate\\\\\n",
+       " <chr> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t accuracy & multiclass & 0.6785714\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 1 × 3\n",
+       "\n",
+       "| .metric &lt;chr&gt; | .estimator &lt;chr&gt; | .estimate &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| accuracy | multiclass | 0.6785714 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  .metric  .estimator .estimate\n",
+       "1 accuracy multiclass 0.6785714"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "best_k <- 1\n",
-    "best_knn_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = best_k)"
+    "weather_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = best_k) %>%\n",
+    "    set_engine(\"kknn\") %>%\n",
+    "    set_mode(\"classification\")\n",
+    "weather_fit <- workflow() %>%\n",
+    "       add_recipe(weather_recipe) %>%\n",
+    "       add_model(weather_spec) %>%\n",
+    "       fit(data = weather_train)\n",
+    "weather_fit\n",
+    "weather_predictions <- predict(weather_fit, weather_test)  %>%\n",
+    "    bind_cols(weather_test)\n",
+    "weather_predictions\n",
+    "weather_metrics <- weather_predictions %>%\n",
+    "    metrics(truth = weather, estimate = .pred_class) %>%\n",
+    "    filter(.metric == \"accuracy\")\n",
+    "weather_metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          Truth\n",
+      "Prediction drizzle rain sun snow fog\n",
+      "   drizzle       3    2  15    0   3\n",
+      "   rain          0  133  22    5   1\n",
+      "   sun          10   14 106    0  14\n",
+      "   snow          0    2   0    1   0\n",
+      "   fog           2    7  20    0   4\n"
+     ]
+    }
+   ],
+   "source": [
+    "weather_conf_mat <- weather_predictions %>%\n",
+    "    conf_mat(truth = weather, estimate = .pred_class) %>%\n",
+    "    print()"
    ]
   },
   {
