added forward selection step

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -387,6 +387,216 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Forward Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A spec_tbl_df: 1461 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>date</th><th scope=col>precipitation</th><th scope=col>temp_max</th><th scope=col>temp_min</th><th scope=col>wind</th><th scope=col>weather</th><th scope=col>temp_avg</th></tr>\n",
+       "\t<tr><th scope=col>&lt;date&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>2012-01-01</td><td> 0.0</td><td>12.8</td><td>5.0</td><td>4.7</td><td>drizzle</td><td>8.90</td></tr>\n",
+       "\t<tr><td>2012-01-02</td><td>10.9</td><td>10.6</td><td>2.8</td><td>4.5</td><td>rain   </td><td>6.70</td></tr>\n",
+       "\t<tr><td>2012-01-03</td><td> 0.8</td><td>11.7</td><td>7.2</td><td>2.3</td><td>rain   </td><td>9.45</td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>2015-12-29</td><td>0</td><td>7.2</td><td> 0.6</td><td>2.6</td><td>fog</td><td>3.90</td></tr>\n",
+       "\t<tr><td>2015-12-30</td><td>0</td><td>5.6</td><td>-1.0</td><td>3.4</td><td>sun</td><td>2.30</td></tr>\n",
+       "\t<tr><td>2015-12-31</td><td>0</td><td>5.6</td><td>-2.1</td><td>3.5</td><td>sun</td><td>1.75</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A spec\\_tbl\\_df: 1461 × 7\n",
+       "\\begin{tabular}{lllllll}\n",
+       " date & precipitation & temp\\_max & temp\\_min & wind & weather & temp\\_avg\\\\\n",
+       " <date> & <dbl> & <dbl> & <dbl> & <dbl> & <fct> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 2012-01-01 &  0.0 & 12.8 & 5.0 & 4.7 & drizzle & 8.90\\\\\n",
+       "\t 2012-01-02 & 10.9 & 10.6 & 2.8 & 4.5 & rain    & 6.70\\\\\n",
+       "\t 2012-01-03 &  0.8 & 11.7 & 7.2 & 2.3 & rain    & 9.45\\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 2015-12-29 & 0 & 7.2 &  0.6 & 2.6 & fog & 3.90\\\\\n",
+       "\t 2015-12-30 & 0 & 5.6 & -1.0 & 3.4 & sun & 2.30\\\\\n",
+       "\t 2015-12-31 & 0 & 5.6 & -2.1 & 3.5 & sun & 1.75\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A spec_tbl_df: 1461 × 7\n",
+       "\n",
+       "| date &lt;date&gt; | precipitation &lt;dbl&gt; | temp_max &lt;dbl&gt; | temp_min &lt;dbl&gt; | wind &lt;dbl&gt; | weather &lt;fct&gt; | temp_avg &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|\n",
+       "| 2012-01-01 |  0.0 | 12.8 | 5.0 | 4.7 | drizzle | 8.90 |\n",
+       "| 2012-01-02 | 10.9 | 10.6 | 2.8 | 4.5 | rain    | 6.70 |\n",
+       "| 2012-01-03 |  0.8 | 11.7 | 7.2 | 2.3 | rain    | 9.45 |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 2015-12-29 | 0 | 7.2 |  0.6 | 2.6 | fog | 3.90 |\n",
+       "| 2015-12-30 | 0 | 5.6 | -1.0 | 3.4 | sun | 2.30 |\n",
+       "| 2015-12-31 | 0 | 5.6 | -2.1 | 3.5 | sun | 1.75 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     date       precipitation temp_max temp_min wind weather temp_avg\n",
+       "1    2012-01-01  0.0          12.8     5.0      4.7  drizzle 8.90    \n",
+       "2    2012-01-02 10.9          10.6     2.8      4.5  rain    6.70    \n",
+       "3    2012-01-03  0.8          11.7     7.2      2.3  rain    9.45    \n",
+       "⋮    ⋮          ⋮             ⋮        ⋮        ⋮    ⋮       ⋮       \n",
+       "1459 2015-12-29 0             7.2       0.6     2.6  fog     3.90    \n",
+       "1460 2015-12-30 0             5.6      -1.0     3.4  sun     2.30    \n",
+       "1461 2015-12-31 0             5.6      -2.1     3.5  sun     1.75    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "names <- colnames(weather_data %>% select(-weather))\n",
+    "weather_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 6 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>size</th><th scope=col>model_string</th><th scope=col>accuracy</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>weather ~ date                                              </td><td>0.6118916</td></tr>\n",
+       "\t<tr><td>2</td><td>weather ~ date+precipitation                                </td><td>0.8104025</td></tr>\n",
+       "\t<tr><td>3</td><td>weather ~ date+precipitation+temp_avg                       </td><td>0.7446935</td></tr>\n",
+       "\t<tr><td>4</td><td>weather ~ date+precipitation+temp_avg+temp_min              </td><td>0.7234864</td></tr>\n",
+       "\t<tr><td>5</td><td>weather ~ date+precipitation+temp_avg+temp_min+temp_max     </td><td>0.6961055</td></tr>\n",
+       "\t<tr><td>6</td><td>weather ~ date+precipitation+temp_avg+temp_min+temp_max+wind</td><td>0.6701061</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 6 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " size & model\\_string & accuracy\\\\\n",
+       " <int> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 1 & weather \\textasciitilde{} date                                               & 0.6118916\\\\\n",
+       "\t 2 & weather \\textasciitilde{} date+precipitation                                 & 0.8104025\\\\\n",
+       "\t 3 & weather \\textasciitilde{} date+precipitation+temp\\_avg                        & 0.7446935\\\\\n",
+       "\t 4 & weather \\textasciitilde{} date+precipitation+temp\\_avg+temp\\_min               & 0.7234864\\\\\n",
+       "\t 5 & weather \\textasciitilde{} date+precipitation+temp\\_avg+temp\\_min+temp\\_max      & 0.6961055\\\\\n",
+       "\t 6 & weather \\textasciitilde{} date+precipitation+temp\\_avg+temp\\_min+temp\\_max+wind & 0.6701061\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 6 × 3\n",
+       "\n",
+       "| size &lt;int&gt; | model_string &lt;chr&gt; | accuracy &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| 1 | weather ~ date                                               | 0.6118916 |\n",
+       "| 2 | weather ~ date+precipitation                                 | 0.8104025 |\n",
+       "| 3 | weather ~ date+precipitation+temp_avg                        | 0.7446935 |\n",
+       "| 4 | weather ~ date+precipitation+temp_avg+temp_min               | 0.7234864 |\n",
+       "| 5 | weather ~ date+precipitation+temp_avg+temp_min+temp_max      | 0.6961055 |\n",
+       "| 6 | weather ~ date+precipitation+temp_avg+temp_min+temp_max+wind | 0.6701061 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  size model_string                                                 accuracy \n",
+       "1 1    weather ~ date                                               0.6118916\n",
+       "2 2    weather ~ date+precipitation                                 0.8104025\n",
+       "3 3    weather ~ date+precipitation+temp_avg                        0.7446935\n",
+       "4 4    weather ~ date+precipitation+temp_avg+temp_min               0.7234864\n",
+       "5 5    weather ~ date+precipitation+temp_avg+temp_min+temp_max      0.6961055\n",
+       "6 6    weather ~ date+precipitation+temp_avg+temp_min+temp_max+wind 0.6701061"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# create an empty tibble to store the results\n",
+    "fs_accuracies <- tibble(size = integer(), \n",
+    "                     model_string = character(), \n",
+    "                     accuracy = numeric())\n",
+    "\n",
+    "# create a model specification\n",
+    "knn_tune <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) %>%\n",
+    "     set_engine(\"kknn\") %>%\n",
+    "     set_mode(\"classification\")\n",
+    "\n",
+    "# create a 5-fold cross-validation object\n",
+    "fs_weather_vfold <- vfold_cv(weather_data, v = 5, strata = weather)\n",
+    "\n",
+    "# store the total number of predictors\n",
+    "n_total <- length(names)\n",
+    "\n",
+    "# stores selected predictors\n",
+    "selected <- c()\n",
+    "\n",
+    "# for every size from 1 to the total number of predictors\n",
+    "for (i in 1:n_total) {\n",
+    "    # for every predictor still not added yet\n",
+    "    accs <- list()\n",
+    "    models <- list()\n",
+    "    for (j in 1:length(names)) {\n",
+    "        # create a model string for this combination of predictors\n",
+    "        preds_new <- c(selected, names[[j]])\n",
+    "        model_string <- paste(\"weather\", \"~\", paste(preds_new, collapse=\"+\"))\n",
+    "\n",
+    "        # create a recipe from the model string\n",
+    "        weather_recipe <- recipe(as.formula(model_string), data = weather_data) %>%\n",
+    "                          step_upsample(weather, over_ratio = 1)\n",
+    "                          step_scale(list(names)) %>%\n",
+    "                          step_center(list(names))\n",
+    "\n",
+    "        # tune the KNN classifier with these predictors, \n",
+    "        # and collect the accuracy for the best K\n",
+    "        acc <- workflow() %>%\n",
+    "          add_recipe(weather_recipe) %>%\n",
+    "          add_model(knn_tune) %>%\n",
+    "          tune_grid(resamples = fs_weather_vfold, grid = 10) %>%\n",
+    "          collect_metrics() %>%\n",
+    "          filter(.metric == \"accuracy\") %>%\n",
+    "          summarize(mx = max(mean))\n",
+    "        acc <- acc$mx %>% unlist()\n",
+    "\n",
+    "        # add this result to the dataframe\n",
+    "        accs[[j]] <- acc\n",
+    "        models[[j]] <- model_string\n",
+    "    }\n",
+    "    jstar <- which.max(unlist(accs))\n",
+    "    fs_accuracies <- fs_accuracies %>%\n",
+    "      add_row(size = i, \n",
+    "              model_string = models[[jstar]], \n",
+    "              accuracy = accs[[jstar]])\n",
+    "    selected <- c(selected, names[[jstar]])\n",
+    "    names <- names[-jstar]\n",
+    "}\n",
+    "fs_accuracies"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -590,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -620,7 +830,25 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
+    }
+   ],
+   "source": [
+    "best_k <- 1\n",
+    "weather_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = best_k) %>%\n",
+    "    set_engine(\"kknn\") %>%\n",
+    "    set_mode(\"classification\")\n",
+    "weather_fit <- workflow() %>%\n",
+    "       add_recipe(weather_recipe) %>%\n",
+    "       add_model(weather_spec) %>%\n",
+    "       fit(data = weather_train)\n",
+    "weather_fit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -735,15 +963,6 @@
     }
    ],
    "source": [
-    "best_k <- 1\n",
-    "weather_spec <- nearest_neighbor(weight_func = \"rectangular\", neighbors = best_k) %>%\n",
-    "    set_engine(\"kknn\") %>%\n",
-    "    set_mode(\"classification\")\n",
-    "weather_fit <- workflow() %>%\n",
-    "       add_recipe(weather_recipe) %>%\n",
-    "       add_model(weather_spec) %>%\n",
-    "       fit(data = weather_train)\n",
-    "weather_fit\n",
     "weather_predictions <- predict(weather_fit, weather_test)  %>%\n",
     "    bind_cols(weather_test)\n",
     "weather_predictions\n",
@@ -751,6 +970,13 @@
     "    metrics(truth = weather, estimate = .pred_class) %>%\n",
     "    filter(.metric == \"accuracy\")\n",
     "weather_metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We see that the accuracy of our model is approximately 67.9%."
    ]
   },
   {
