added new section titles in Data Analysis

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -597,6 +597,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -611,68 +618,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 76,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Recipe\n",
-       "\n",
-       "Inputs:\n",
-       "\n",
-       "      role #variables\n",
-       "   outcome          1\n",
-       " predictor          3\n",
-       "\n",
-       "Operations:\n",
-       "\n",
-       "$terms\n",
-       "<list_of<quosure>>\n",
-       "\n",
-       "[[1]]\n",
-       "\u001b[1m<quosure>\u001b[22m\n",
-       "expr: \u001b[34m^weather\u001b[39m\n",
-       "env:  \u001b[34m0x564edc719700\u001b[39m\n",
-       "\n",
-       "\n",
-       "$over_ratio\n",
-       "[1] 1\n",
-       "\n",
-       "$ratio\n",
-       "[1] NA\n",
-       "\n",
-       "$role\n",
-       "[1] NA\n",
-       "\n",
-       "$trained\n",
-       "[1] FALSE\n",
-       "\n",
-       "$column\n",
-       "NULL\n",
-       "\n",
-       "$target\n",
-       "[1] NA\n",
-       "\n",
-       "$skip\n",
-       "[1] TRUE\n",
-       "\n",
-       "$id\n",
-       "[1] \"upsample_1A3AR\"\n",
-       "\n",
-       "$seed\n",
-       "[1] 74173\n",
-       "\n",
-       "attr(,\"class\")\n",
-       "[1] \"step_upsample\" \"step\"         \n",
-       "Scaling for all_predictors()\n",
-       "Centering for all_predictors()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "set.seed(200)\n",
     "knn_tune <- nearest_neighbor(weight_func = \"rectangular\", neighbors = tune()) %>%\n",
@@ -682,7 +630,6 @@
     "    step_upsample(weather, over_ratio=1) %>%\n",
     "    step_scale(all_predictors()) %>%\n",
     "    step_center(all_predictors())\n",
-    "weather_recipe\n",
     "weather_vfold <- vfold_cv(weather_train, v = 5, strata = weather)"
    ]
   },
@@ -842,6 +789,13 @@
     "       add_model(weather_spec) %>%\n",
     "       fit(data = weather_train)\n",
     "weather_fit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Predictions and Model Accuracy"
    ]
   },
   {
