upsample and forward selection

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -395,9 +395,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".list-inline {list-style: none; margin:0; padding: 0}\n",
+       ".list-inline>li {display: inline-block}\n",
+       ".list-inline>li:not(:last-child)::after {content: \"\\00b7\"; padding: 0 .5ex}\n",
+       "</style>\n",
+       "<ol class=list-inline><li>'date'</li><li>'precipitation'</li><li>'temp_max'</li><li>'temp_min'</li><li>'wind'</li></ol>\n"
+      ],
+      "text/latex": [
+       "\\begin{enumerate*}\n",
+       "\\item 'date'\n",
+       "\\item 'precipitation'\n",
+       "\\item 'temp\\_max'\n",
+       "\\item 'temp\\_min'\n",
+       "\\item 'wind'\n",
+       "\\end{enumerate*}\n"
+      ],
+      "text/markdown": [
+       "1. 'date'\n",
+       "2. 'precipitation'\n",
+       "3. 'temp_max'\n",
+       "4. 'temp_min'\n",
+       "5. 'wind'\n",
+       "\n",
+       "\n"
+      ],
+      "text/plain": [
+       "[1] \"date\"          \"precipitation\" \"temp_max\"      \"temp_min\"     \n",
+       "[5] \"wind\"         "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/html": [
@@ -464,70 +500,67 @@
     }
    ],
    "source": [
-    "names <- colnames(weather_data %>% select(-weather))\n",
+    "names <- colnames(weather_data %>% select(-weather, -temp_avg))\n",
+    "names\n",
     "weather_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<table>\n",
-       "<caption>A tibble: 6 × 3</caption>\n",
+       "<caption>A tibble: 5 × 3</caption>\n",
        "<thead>\n",
        "\t<tr><th scope=col>size</th><th scope=col>model_string</th><th scope=col>accuracy</th></tr>\n",
        "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><td>1</td><td>weather ~ date                                              </td><td>0.6118916</td></tr>\n",
-       "\t<tr><td>2</td><td>weather ~ date+precipitation                                </td><td>0.8104025</td></tr>\n",
-       "\t<tr><td>3</td><td>weather ~ date+precipitation+temp_avg                       </td><td>0.7446935</td></tr>\n",
-       "\t<tr><td>4</td><td>weather ~ date+precipitation+temp_avg+temp_min              </td><td>0.7234864</td></tr>\n",
-       "\t<tr><td>5</td><td>weather ~ date+precipitation+temp_avg+temp_min+temp_max     </td><td>0.6961055</td></tr>\n",
-       "\t<tr><td>6</td><td>weather ~ date+precipitation+temp_avg+temp_min+temp_max+wind</td><td>0.6701061</td></tr>\n",
+       "\t<tr><td>1</td><td>weather ~ date                                     </td><td>0.6303824</td></tr>\n",
+       "\t<tr><td>2</td><td>weather ~ date+precipitation                       </td><td>0.8008252</td></tr>\n",
+       "\t<tr><td>3</td><td>weather ~ date+precipitation+temp_max              </td><td>0.7289448</td></tr>\n",
+       "\t<tr><td>4</td><td>weather ~ date+precipitation+temp_max+temp_min     </td><td>0.7084109</td></tr>\n",
+       "\t<tr><td>5</td><td>weather ~ date+precipitation+temp_max+temp_min+wind</td><td>0.6823998</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
-       "A tibble: 6 × 3\n",
+       "A tibble: 5 × 3\n",
        "\\begin{tabular}{lll}\n",
        " size & model\\_string & accuracy\\\\\n",
        " <int> & <chr> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t 1 & weather \\textasciitilde{} date                                               & 0.6118916\\\\\n",
-       "\t 2 & weather \\textasciitilde{} date+precipitation                                 & 0.8104025\\\\\n",
-       "\t 3 & weather \\textasciitilde{} date+precipitation+temp\\_avg                        & 0.7446935\\\\\n",
-       "\t 4 & weather \\textasciitilde{} date+precipitation+temp\\_avg+temp\\_min               & 0.7234864\\\\\n",
-       "\t 5 & weather \\textasciitilde{} date+precipitation+temp\\_avg+temp\\_min+temp\\_max      & 0.6961055\\\\\n",
-       "\t 6 & weather \\textasciitilde{} date+precipitation+temp\\_avg+temp\\_min+temp\\_max+wind & 0.6701061\\\\\n",
+       "\t 1 & weather \\textasciitilde{} date                                      & 0.6303824\\\\\n",
+       "\t 2 & weather \\textasciitilde{} date+precipitation                        & 0.8008252\\\\\n",
+       "\t 3 & weather \\textasciitilde{} date+precipitation+temp\\_max               & 0.7289448\\\\\n",
+       "\t 4 & weather \\textasciitilde{} date+precipitation+temp\\_max+temp\\_min      & 0.7084109\\\\\n",
+       "\t 5 & weather \\textasciitilde{} date+precipitation+temp\\_max+temp\\_min+wind & 0.6823998\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
-       "A tibble: 6 × 3\n",
+       "A tibble: 5 × 3\n",
        "\n",
        "| size &lt;int&gt; | model_string &lt;chr&gt; | accuracy &lt;dbl&gt; |\n",
        "|---|---|---|\n",
-       "| 1 | weather ~ date                                               | 0.6118916 |\n",
-       "| 2 | weather ~ date+precipitation                                 | 0.8104025 |\n",
-       "| 3 | weather ~ date+precipitation+temp_avg                        | 0.7446935 |\n",
-       "| 4 | weather ~ date+precipitation+temp_avg+temp_min               | 0.7234864 |\n",
-       "| 5 | weather ~ date+precipitation+temp_avg+temp_min+temp_max      | 0.6961055 |\n",
-       "| 6 | weather ~ date+precipitation+temp_avg+temp_min+temp_max+wind | 0.6701061 |\n",
+       "| 1 | weather ~ date                                      | 0.6303824 |\n",
+       "| 2 | weather ~ date+precipitation                        | 0.8008252 |\n",
+       "| 3 | weather ~ date+precipitation+temp_max               | 0.7289448 |\n",
+       "| 4 | weather ~ date+precipitation+temp_max+temp_min      | 0.7084109 |\n",
+       "| 5 | weather ~ date+precipitation+temp_max+temp_min+wind | 0.6823998 |\n",
        "\n"
       ],
       "text/plain": [
-       "  size model_string                                                 accuracy \n",
-       "1 1    weather ~ date                                               0.6118916\n",
-       "2 2    weather ~ date+precipitation                                 0.8104025\n",
-       "3 3    weather ~ date+precipitation+temp_avg                        0.7446935\n",
-       "4 4    weather ~ date+precipitation+temp_avg+temp_min               0.7234864\n",
-       "5 5    weather ~ date+precipitation+temp_avg+temp_min+temp_max      0.6961055\n",
-       "6 6    weather ~ date+precipitation+temp_avg+temp_min+temp_max+wind 0.6701061"
+       "  size model_string                                        accuracy \n",
+       "1 1    weather ~ date                                      0.6303824\n",
+       "2 2    weather ~ date+precipitation                        0.8008252\n",
+       "3 3    weather ~ date+precipitation+temp_max               0.7289448\n",
+       "4 4    weather ~ date+precipitation+temp_max+temp_min      0.7084109\n",
+       "5 5    weather ~ date+precipitation+temp_max+temp_min+wind 0.6823998"
       ]
      },
      "metadata": {},
