--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -387,7 +387,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can see that ...."
+    "To explore our data, we made two graphs showing the relationships among the three predictors we plan to use; wind speed, precipitation, and average temperature. We will explain why we chose these three predictores to classify the type of weather later in this section. \n",
+    "Just exploring our predictors, we see that rain is the most dominant weather and the most distributed among both graphs. Specifically, the majority of the plots for rain are mostly near the average wind speed and  Snow also seems to be quite Sunny weather sits where the precipiation is very low and "
    ]
   },
   {
@@ -395,19 +396,6 @@
    "metadata": {},
    "source": [
     "## Data Analysis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "weather_recipe <- recipe(weather ~ precipitation + temp_avg + wind, data = weather_data) %>%\n",
-    "    step_upsample(weather, over_ratio = 1, skip = FALSE) %>%\n",
-    "    prep()\n",
-    "\n",
-    "weather_bake <- bake(weather_recipe, weather_data)"
    ]
   },
   {
@@ -433,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -471,90 +459,73 @@
      },
      "metadata": {},
      "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<table>\n",
-       "<caption>A spec_tbl_df: 1461 × 7</caption>\n",
-       "<thead>\n",
-       "\t<tr><th scope=col>date</th><th scope=col>precipitation</th><th scope=col>temp_max</th><th scope=col>temp_min</th><th scope=col>wind</th><th scope=col>weather</th><th scope=col>temp_avg</th></tr>\n",
-       "\t<tr><th scope=col>&lt;date&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
-       "</thead>\n",
-       "<tbody>\n",
-       "\t<tr><td>2012-01-01</td><td> 0.0</td><td>12.8</td><td>5.0</td><td>4.7</td><td>drizzle</td><td>8.90</td></tr>\n",
-       "\t<tr><td>2012-01-02</td><td>10.9</td><td>10.6</td><td>2.8</td><td>4.5</td><td>rain   </td><td>6.70</td></tr>\n",
-       "\t<tr><td>2012-01-03</td><td> 0.8</td><td>11.7</td><td>7.2</td><td>2.3</td><td>rain   </td><td>9.45</td></tr>\n",
-       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
-       "\t<tr><td>2015-12-29</td><td>0</td><td>7.2</td><td> 0.6</td><td>2.6</td><td>fog</td><td>3.90</td></tr>\n",
-       "\t<tr><td>2015-12-30</td><td>0</td><td>5.6</td><td>-1.0</td><td>3.4</td><td>sun</td><td>2.30</td></tr>\n",
-       "\t<tr><td>2015-12-31</td><td>0</td><td>5.6</td><td>-2.1</td><td>3.5</td><td>sun</td><td>1.75</td></tr>\n",
-       "</tbody>\n",
-       "</table>\n"
-      ],
-      "text/latex": [
-       "A spec\\_tbl\\_df: 1461 × 7\n",
-       "\\begin{tabular}{lllllll}\n",
-       " date & precipitation & temp\\_max & temp\\_min & wind & weather & temp\\_avg\\\\\n",
-       " <date> & <dbl> & <dbl> & <dbl> & <dbl> & <fct> & <dbl>\\\\\n",
-       "\\hline\n",
-       "\t 2012-01-01 &  0.0 & 12.8 & 5.0 & 4.7 & drizzle & 8.90\\\\\n",
-       "\t 2012-01-02 & 10.9 & 10.6 & 2.8 & 4.5 & rain    & 6.70\\\\\n",
-       "\t 2012-01-03 &  0.8 & 11.7 & 7.2 & 2.3 & rain    & 9.45\\\\\n",
-       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
-       "\t 2015-12-29 & 0 & 7.2 &  0.6 & 2.6 & fog & 3.90\\\\\n",
-       "\t 2015-12-30 & 0 & 5.6 & -1.0 & 3.4 & sun & 2.30\\\\\n",
-       "\t 2015-12-31 & 0 & 5.6 & -2.1 & 3.5 & sun & 1.75\\\\\n",
-       "\\end{tabular}\n"
-      ],
-      "text/markdown": [
-       "\n",
-       "A spec_tbl_df: 1461 × 7\n",
-       "\n",
-       "| date &lt;date&gt; | precipitation &lt;dbl&gt; | temp_max &lt;dbl&gt; | temp_min &lt;dbl&gt; | wind &lt;dbl&gt; | weather &lt;fct&gt; | temp_avg &lt;dbl&gt; |\n",
-       "|---|---|---|---|---|---|---|\n",
-       "| 2012-01-01 |  0.0 | 12.8 | 5.0 | 4.7 | drizzle | 8.90 |\n",
-       "| 2012-01-02 | 10.9 | 10.6 | 2.8 | 4.5 | rain    | 6.70 |\n",
-       "| 2012-01-03 |  0.8 | 11.7 | 7.2 | 2.3 | rain    | 9.45 |\n",
-       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
-       "| 2015-12-29 | 0 | 7.2 |  0.6 | 2.6 | fog | 3.90 |\n",
-       "| 2015-12-30 | 0 | 5.6 | -1.0 | 3.4 | sun | 2.30 |\n",
-       "| 2015-12-31 | 0 | 5.6 | -2.1 | 3.5 | sun | 1.75 |\n",
-       "\n"
-      ],
-      "text/plain": [
-       "     date       precipitation temp_max temp_min wind weather temp_avg\n",
-       "1    2012-01-01  0.0          12.8     5.0      4.7  drizzle 8.90    \n",
-       "2    2012-01-02 10.9          10.6     2.8      4.5  rain    6.70    \n",
-       "3    2012-01-03  0.8          11.7     7.2      2.3  rain    9.45    \n",
-       "⋮    ⋮          ⋮             ⋮        ⋮        ⋮    ⋮       ⋮       \n",
-       "1459 2015-12-29 0             7.2       0.6     2.6  fog     3.90    \n",
-       "1460 2015-12-30 0             5.6      -1.0     3.4  sun     2.30    \n",
-       "1461 2015-12-31 0             5.6      -2.1     3.5  sun     1.75    "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "names <- colnames(weather_bake %>% select(-weather, -temp_avg))\n",
-    "names\n",
-    "weather_bake"
+    "names <- colnames(weather_data %>% select(-weather, -temp_avg))\n",
+    "names"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ERROR",
-     "evalue": "Error in names[[j]]: object of type 'builtin' is not subsettable\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in names[[j]]: object of type 'builtin' is not subsettable\nTraceback:\n"
-     ]
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A tibble: 5 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>size</th><th scope=col>model_string</th><th scope=col>accuracy</th></tr>\n",
+       "\t<tr><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>1</td><td>weather ~ date                                     </td><td>0.5933824</td></tr>\n",
+       "\t<tr><td>2</td><td>weather ~ date+precipitation                       </td><td>0.8097025</td></tr>\n",
+       "\t<tr><td>3</td><td>weather ~ date+precipitation+temp_min              </td><td>0.7296402</td></tr>\n",
+       "\t<tr><td>4</td><td>weather ~ date+precipitation+temp_min+temp_max     </td><td>0.7118599</td></tr>\n",
+       "\t<tr><td>5</td><td>weather ~ date+precipitation+temp_min+temp_max+wind</td><td>0.6817626</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A tibble: 5 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " size & model\\_string & accuracy\\\\\n",
+       " <int> & <chr> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t 1 & weather \\textasciitilde{} date                                      & 0.5933824\\\\\n",
+       "\t 2 & weather \\textasciitilde{} date+precipitation                        & 0.8097025\\\\\n",
+       "\t 3 & weather \\textasciitilde{} date+precipitation+temp\\_min               & 0.7296402\\\\\n",
+       "\t 4 & weather \\textasciitilde{} date+precipitation+temp\\_min+temp\\_max      & 0.7118599\\\\\n",
+       "\t 5 & weather \\textasciitilde{} date+precipitation+temp\\_min+temp\\_max+wind & 0.6817626\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A tibble: 5 × 3\n",
+       "\n",
+       "| size &lt;int&gt; | model_string &lt;chr&gt; | accuracy &lt;dbl&gt; |\n",
+       "|---|---|---|\n",
+       "| 1 | weather ~ date                                      | 0.5933824 |\n",
+       "| 2 | weather ~ date+precipitation                        | 0.8097025 |\n",
+       "| 3 | weather ~ date+precipitation+temp_min               | 0.7296402 |\n",
+       "| 4 | weather ~ date+precipitation+temp_min+temp_max      | 0.7118599 |\n",
+       "| 5 | weather ~ date+precipitation+temp_min+temp_max+wind | 0.6817626 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  size model_string                                        accuracy \n",
+       "1 1    weather ~ date                                      0.5933824\n",
+       "2 2    weather ~ date+precipitation                        0.8097025\n",
+       "3 3    weather ~ date+precipitation+temp_min               0.7296402\n",
+       "4 4    weather ~ date+precipitation+temp_min+temp_max      0.7118599\n",
+       "5 5    weather ~ date+precipitation+temp_min+temp_max+wind 0.6817626"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
