toc links working

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -20,7 +20,8 @@
     "    * [Forward Selection](#fs)\n",
     "    * [Model Training](#training)\n",
     "    * [Predictions and Model Accuracy](#accuracy)\n",
-    "    * [Discussion](#discussion)\n",
+    "    * [Model Visualization](#model-viz)\n",
+    "* [Discussion](#discussion)\n",
     "* [References](#ref)"
    ]
   },
@@ -341,7 +342,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualization"
+    "### Visualization <a class=\"anchor\" id=\"viz\"></a>"
    ]
   },
   {
@@ -438,14 +439,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Analysis"
+    "## Data Analysis <a class=\"anchor\" id=\"analysis\"></a>"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Method Overview"
+    "### Method Overview <a class=\"anchor\" id=\"overview\"></a>"
    ]
   },
   {
@@ -460,7 +461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Forward Selection"
+    "### Forward Selection <a class=\"anchor\" id=\"fs\"></a>"
    ]
   },
   {
@@ -697,7 +698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Training"
+    "### Model Training <a class=\"anchor\" id=\"training\"></a>"
    ]
   },
   {
@@ -818,7 +819,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Predictions and Model Accuracy"
+    "### Predictions and Model Accuracy <a class=\"anchor\" id=\"accuracy\"></a>"
    ]
   },
   {
@@ -865,7 +866,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Model Visualization"
+    "### Model Visualization <a class=\"anchor\" id=\"model-viz\"></a>"
    ]
   },
   {
@@ -924,7 +925,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Discussion"
+    "## Discussion <a class=\"anchor\" id=\"discussion\"></a>"
    ]
   },
   {
@@ -965,7 +966,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## References"
+    "## References <a class=\"anchor\" id=\"ref\"></a>"
    ]
   },
   {
