additional fs explanation

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -14,6 +14,7 @@
     "## Table of Contents:\n",
     "* [Introduction](#intro)\n",
     "* [Exploring the Dataset](#explore)\n",
+    "    * [Tidying the Data](#tidy)\n",
     "    * [Visualization](#viz)\n",
     "* [Data Analysis](#analysis)\n",
     "    * [Method Overview](#overview)\n",
@@ -192,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -211,6 +212,96 @@
       "\n"
      ]
     },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A spec_tbl_df: 1461 × 6</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>date</th><th scope=col>precipitation</th><th scope=col>temp_max</th><th scope=col>temp_min</th><th scope=col>wind</th><th scope=col>weather</th></tr>\n",
+       "\t<tr><th scope=col>&lt;date&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>2012-01-01</td><td> 0.0</td><td>12.8</td><td>5.0</td><td>4.7</td><td>drizzle</td></tr>\n",
+       "\t<tr><td>2012-01-02</td><td>10.9</td><td>10.6</td><td>2.8</td><td>4.5</td><td>rain   </td></tr>\n",
+       "\t<tr><td>2012-01-03</td><td> 0.8</td><td>11.7</td><td>7.2</td><td>2.3</td><td>rain   </td></tr>\n",
+       "\t<tr><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td><td>⋮</td></tr>\n",
+       "\t<tr><td>2015-12-29</td><td>0</td><td>7.2</td><td> 0.6</td><td>2.6</td><td>fog</td></tr>\n",
+       "\t<tr><td>2015-12-30</td><td>0</td><td>5.6</td><td>-1.0</td><td>3.4</td><td>sun</td></tr>\n",
+       "\t<tr><td>2015-12-31</td><td>0</td><td>5.6</td><td>-2.1</td><td>3.5</td><td>sun</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A spec\\_tbl\\_df: 1461 × 6\n",
+       "\\begin{tabular}{llllll}\n",
+       " date & precipitation & temp\\_max & temp\\_min & wind & weather\\\\\n",
+       " <date> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t 2012-01-01 &  0.0 & 12.8 & 5.0 & 4.7 & drizzle\\\\\n",
+       "\t 2012-01-02 & 10.9 & 10.6 & 2.8 & 4.5 & rain   \\\\\n",
+       "\t 2012-01-03 &  0.8 & 11.7 & 7.2 & 2.3 & rain   \\\\\n",
+       "\t ⋮ & ⋮ & ⋮ & ⋮ & ⋮ & ⋮\\\\\n",
+       "\t 2015-12-29 & 0 & 7.2 &  0.6 & 2.6 & fog\\\\\n",
+       "\t 2015-12-30 & 0 & 5.6 & -1.0 & 3.4 & sun\\\\\n",
+       "\t 2015-12-31 & 0 & 5.6 & -2.1 & 3.5 & sun\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A spec_tbl_df: 1461 × 6\n",
+       "\n",
+       "| date &lt;date&gt; | precipitation &lt;dbl&gt; | temp_max &lt;dbl&gt; | temp_min &lt;dbl&gt; | wind &lt;dbl&gt; | weather &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|\n",
+       "| 2012-01-01 |  0.0 | 12.8 | 5.0 | 4.7 | drizzle |\n",
+       "| 2012-01-02 | 10.9 | 10.6 | 2.8 | 4.5 | rain    |\n",
+       "| 2012-01-03 |  0.8 | 11.7 | 7.2 | 2.3 | rain    |\n",
+       "| ⋮ | ⋮ | ⋮ | ⋮ | ⋮ | ⋮ |\n",
+       "| 2015-12-29 | 0 | 7.2 |  0.6 | 2.6 | fog |\n",
+       "| 2015-12-30 | 0 | 5.6 | -1.0 | 3.4 | sun |\n",
+       "| 2015-12-31 | 0 | 5.6 | -2.1 | 3.5 | sun |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "     date       precipitation temp_max temp_min wind weather\n",
+       "1    2012-01-01  0.0          12.8     5.0      4.7  drizzle\n",
+       "2    2012-01-02 10.9          10.6     2.8      4.5  rain   \n",
+       "3    2012-01-03  0.8          11.7     7.2      2.3  rain   \n",
+       "⋮    ⋮          ⋮             ⋮        ⋮        ⋮    ⋮      \n",
+       "1459 2015-12-29 0             7.2       0.6     2.6  fog    \n",
+       "1460 2015-12-30 0             5.6      -1.0     3.4  sun    \n",
+       "1461 2015-12-31 0             5.6      -2.1     3.5  sun    "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Read the data into R (provided by https://www.kaggle.com/ananthr1/weather-prediction)\n",
+    "weather <- read_csv(\"https://raw.githubusercontent.com/irisxu02/dsci100-group13/main/weather.csv\")\n",
+    "weather"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Tidying the Data <a class=\"anchor\" id=\"tidy\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We want the weather variable to be categorical, so we need to convert it to type factor. Furthermore, we want to create a new variable for average temperature because that would enhance the data set by giving us a new way to look at temperature. We do this below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
     {
      "data": {
       "text/html": [
@@ -277,8 +368,7 @@
     }
    ],
    "source": [
-    "# Read the data into R (provided by https://www.kaggle.com/ananthr1/weather-prediction)\n",
-    "weather_data <- read_csv(\"https://raw.githubusercontent.com/irisxu02/dsci100-group13/main/weather.csv\") %>%\n",
+    "weather_data <- weather %>%\n",
     "    mutate(weather = as_factor(weather),\n",
     "           temp_avg = (temp_max + temp_min)/2)\n",
     "weather_data"
@@ -335,7 +425,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our data is highly unbalanced with respect to our predictor variable. For this reason, we will upsample the rare weather in our data analysis."
+    "Our data is highly unbalanced with respect to our target variable. For this reason, we will upsample the rare weather in our data analysis."
    ]
   },
   {
@@ -691,7 +781,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We see above that **TODO**"
+    "The table above shows that out of the 5 sets of predictors being tested, the one using precipitation+temp_avg+temp_min gives the best accuracy. There is a significant improvement when temp_avg is used as a predictor in addition to precipitation, and a relatively smaller improvement when adding temp_min as the third predictor variable. Overall, we see that more predictors doesn't necessarily lead to a better model. When both temp_max and wind variables are added, the accuracy level drops, perhaps because the additional predictors adds an unnecessary layer of complication and makes the model concerned with irrelevant/less relevant variables.\n",
+    "\n",
+    "Forward selection in this way doesn't test all of the possible combinations of variables we could be using as predictors, and the process is time consuming. There could be better ways of selecting variables. However, by combining intuition and this technique to produce accuracy estimates for a few possible combinations, we can optimize our model accuracy to an extent that is enough for our purposes in this assignment.\n",
+    "\n",
+    "In the following section where we train our model, we will use 3 predictors: **precipitation, average temperature, minimum temperature**."
    ]
   },
   {
@@ -942,6 +1036,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "- why/how we chose predictor variables / how weather is related to these variables\n",
+    "- why our question is important"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**TODO**\n",
     "We can see that the model is relatively accurate in predicting rain and sun, however it failed to predict snow and fog accurately, with 50% and 10%\n",
     "accuracy respectively. This could be due to lack of available data points of rare weathers."
@@ -977,21 +1079,6 @@
     "\n",
     "April 30, 2020. (n.d.). Weather and applied statistics. Michigan Technological University. Retrieved April 5, 2022, from https://onlinedegrees.mtu.edu/news/weather-applied-statistics"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- why/how we chose predictor variables / how weather is related to these variables\n",
-    "- why our question is important"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
