second literature citation

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -1077,7 +1077,9 @@
    "source": [
     "R, A. (2022, January 17). Weather Prediction. Kaggle. Retrieved March 11, 2022, from https://www.kaggle.com/ananthr1/weather-prediction\n",
     "\n",
-    "April 30, 2020. (n.d.). Weather and applied statistics. Michigan Technological University. Retrieved April 5, 2022, from https://onlinedegrees.mtu.edu/news/weather-applied-statistics"
+    "April 30, 2020. (n.d.). Weather and applied statistics. Michigan Technological University. Retrieved April 5, 2022, from https://onlinedegrees.mtu.edu/news/weather-applied-statistics\n",
+    "\n",
+    "Data Science for weather prediction - the prerequisite to all natural disasters. DataFlair. (2021, April 5). Retrieved April 5, 2022, from https://data-flair.training/blogs/data-science-for-weather-prediction/"
    ]
   }
  ],
