--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -39,7 +39,7 @@
    "source": [
     "Weather warnings are important forecasts because they are used to protect life and property. Especially in Seattle, a city that rains often, forecasts are made based on temperature, precipitation to help determine future climate expectations. These forecasts help business and farmers plan for power usage, irrigation and protection and also help people plan activities and dress for the weather accordingly. \n",
     " \n",
-    "This model aims to answer the question: **can we classify weather using daily precipitation, wind speed and average temperature as predictors**? The data set we obtained (source: https://www.kaggle.com/ananthr1/weather-prediction) contains daily observations of weather in Seattle, Washington between 2012 to 2015. The set of variables per observation in this data set is:\n",
+    "This model aims to answer the question: **how well can we classify weather using precipitation, temperature, and wind speed data**? The data set we obtained (source: https://www.kaggle.com/ananthr1/weather-prediction) contains daily observations of weather in Seattle, Washington between 2012 to 2015. The set of variables per observation in this data set is:\n",
     "- date: the date of the observation\n",
     "- precipitation: the amount of precipitation in any form (cm)\n",
     "- temp_max: the maximum temperature (Celsius)\n",
