added 1 sentence summary

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -1060,6 +1060,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To answer our question **how well can we classify weather using precipitation, temperature, and wind speed data?**, our model can classify weather correctly **75.8%** of the time. This is the result from using **precipitation, average temperature, minimum temperature** as predictors and **$K=5$** with the KNN Classification model.\n",
+    "\n",
     "We could also look at improving our model. With the data available, we can further try different combinations of variables in our forward selection step to select a better set of variables with more predictive power. But are there other variables which we can interpret that do well at predicting the type of weather? For example, we are curious as to whether temperature difference (temp_max - temp_min) would be a good predictor and if it can improve our prediction accuracy. There are likely many variables that aren't even included in this data set that data scientists use for applications in meteorology and studies surrounding weather and climate change.\n",
     "\n"
    ]
